fix: resolved failing unit tests